# Ritcoin

./: .gitignore  Cargo.toml  README.md  tarpaulin-report.html
design/: research.md  roadmap.md  rpc.md
src/: block.rs  blockchain.rs  cli.rs  lib.rs  main.rs  rpc.rs  scripts.rs  transactions.rs  utils.rs  wallets.rs  wallets_2.rs
src/wallets/: public.txt  secret.txt
tests/: cli.rs  rpc.rs
wallets/: my_new_wallet.json  wallet_testt.json
