[package]
name = "ritcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
hex = "0.4.3"
rand = "0.8.5"
rsa = "0.7.1"
secp256k1 = "0.28.2"
serde = "1.0.197"
serde_json = "1.0.114"
sha2 = "0.10.5"
