[package]
name = "ritcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bs58 = "0.4.0"
clap = { version = "4.5.3", features = ["derive"] }
hex = "0.4.3"
jsonrpc-http-server = "15.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
rsa = "0.7.1"
secp256k1 = "0.28.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.5"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[[bin]]
name = "ritcoin_cli"
path = "src/bin/cli.rs"

[[bin]]
name = "ritcoin_rpc"
path = "src/bin/rpc.rs"